--- a/net/webrtc/Cargo.toml
+++ b/net/webrtc/Cargo.toml
@@ -54,7 +54,7 @@ reqwest = { version = "0.11", features = ["default-tls"], optional = true }
 parse_link_header = {version = "0.3", features = ["url"]}
 async-recursion = { version = "1.0.0", optional = true }
 
-livekit-protocol = { version = "0.3", optional = true }
+livekit-protocol = { version = "0.3, < 0.3.4", optional = true }
 livekit-api = { version = "0.3", default-features = false, features = ["signal-client", "access-token", "native-tls"], optional = true }
 
 warp = {version = "0.3", optional = true }
