--- a/utils/togglerecord/Cargo.toml
+++ b/utils/togglerecord/Cargo.toml
@@ -12,7 +12,7 @@ rust-version.workspace = true
 gst.workspace = true
 gst-audio.workspace = true
 gst-video.workspace = true
-gst-plugin-gtk4 = { path = "../../video/gtk4", optional = true }
+gst-plugin-gtk4 = { path = "../../video/gtk4", version = "0.13", optional = true }
 gtk = { workspace = true, optional = true }
 gio = { workspace = true, optional = true }
 parking_lot = "0.12"
