--- a/net/webrtc/Cargo.toml
+++ b/net/webrtc/Cargo.toml
@@ -34,6 +34,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 fastrand = "2.0"
 gst_plugin_webrtc_protocol = { path="protocol", package = "gst-plugin-webrtc-signalling-protocol" }
+gst_plugin_webrtc_signalling = { path="signalling", package = "gst-plugin-webrtc-signalling" }
 human_bytes = "0.4"
 once_cell.workspace = true
 rand = "0.8"
@@ -61,13 +62,13 @@ livekit-api = { version = "0.3", default-features = false, features = ["signal-c
 warp = {version = "0.3", optional = true }
 ctrlc = {version = "3.4.0", optional = true }
 
+tracing = { version = "0.1", features = ["log"] }
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+tracing-log = "0.2"
 
 [dev-dependencies]
 gst-plugin-rtp = { path = "../rtp" }
 tokio = { version = "1", features = ["signal"] }
-tracing = { version = "0.1", features = ["log"] }
-tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
-tracing-log = "0.2"
 clap = { version = "4", features = ["derive"] }
 regex = "1"
 
