--- a/net/webrtc/Cargo.toml
+++ b/net/webrtc/Cargo.toml
@@ -59,7 +59,7 @@ async-recursion = { version = "1.0.0", optional = true }
 livekit-protocol = { version = "0.3, < 0.3.4", optional = true }
 livekit-api = { version = "0.3", default-features = false, features = ["signal-client", "access-token", "native-tls"], optional = true }
 
-warp = {version = "0.3", optional = true }
+warp = {version = "0.3", optional = true, features = ["tls"] }
 ctrlc = {version = "3.4.0", optional = true }
 
 tracing = { version = "0.1", features = ["log"] }
@@ -81,7 +81,7 @@ path = "src/lib.rs"
 gst-plugin-version-helper.workspace = true
 
 [features]
-default = ["v1_22", "aws", "janus", "livekit", "whip"]
+default = ["v1_22", "aws", "janus", "livekit", "whip", "web_server"]
 static = []
 capi = []
 v1_22 = ["gst/v1_22", "gst-app/v1_22", "gst-video/v1_22", "gst-webrtc/v1_22", "gst-sdp/v1_22", "gst-rtp/v1_22"]
@@ -93,6 +93,7 @@ aws = ["dep:aws-config", "dep:aws-types", "dep:aws-credential-types", "dep:aws-s
 janus = ["dep:http"]
 livekit = ["dep:livekit-protocol", "dep:livekit-api"]
 whip = ["dep:async-recursion", "dep:reqwest", "dep:warp", "dep:ctrlc"]
+web_server = ["dep:warp"]
 
 [package.metadata.capi]
 min_version = "0.9.21"
