--- a/deny.toml
+++ b/deny.toml
@@ -1,9 +1,7 @@
 [advisories]
+version = 2
 db-path = "~/.cargo/advisory-db"
 db-urls = ["https://github.com/rustsec/advisory-db"]
-vulnerability = "deny"
-unmaintained = "warn"
-notice = "warn"
 ignore = [
     # Waiting for https://github.com/librespot-org/librespot/issues/937
     "RUSTSEC-2021-0059",
@@ -15,13 +13,19 @@ ignore = [
 ]
 
 [licenses]
-unlicensed = "deny"
+version = 2
 allow = [
+  "MIT",
+  "BSD-2-Clause",
+  "BSD-3-Clause",
+  "ISC",
+  "OpenSSL",
+  "Zlib",
+  "Unicode-DFS-2016",
+  "Apache-2.0",
+  "Apache-2.0 WITH LLVM-exception",
   "MPL-2.0",
 ]
-default = "deny"
-copyleft = "deny"
-allow-osi-fsf-free = "either"
 confidence-threshold = 0.8
 
 [[licenses.clarify]]
