ci: Ignore bitstream-io update until MSRV can be updated to 1.80+
Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1772>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -370,7 +370,8 @@ outdated:
     - if: '$CI_PIPELINE_SOURCE == "schedule"'
   script:
     - cargo update --color=always
-    - cargo outdated --color=always --root-deps-only --exit-code 1 -v
+    # Ignore bitstream-io until we can update MSRV to 1.80
+    - cargo outdated --color=always --root-deps-only --exit-code 1 -v -i bitstream-io
 
 coverage:
   allow_failure: true
