deny: Ignore proc-macro-error being unmaintained
See https://github.com/yanganto/test-with/issues/91

Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1772>

--- a/deny.toml
+++ b/deny.toml
@@ -10,6 +10,9 @@ ignore = [
     "RUSTSEC-2021-0145",
     # sodiumoxide is deprecated
     "RUSTSEC-2021-0137",
+    # proc-macro-error is unmaintained
+    # https://github.com/yanganto/test-with/issues/91
+    "RUSTSEC-2024-0370",
 ]
 
 [licenses]
