--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -371,7 +371,8 @@ outdated:
   script:
     - cargo update --color=always
     # Ignore bitstream-io until we can update MSRV to 1.80
-    - cargo outdated --color=always --root-deps-only --exit-code 1 -v -i bitstream-io
+    # Ignore test-with until we can update MSRV to 1.77
+    - cargo outdated --color=always --root-deps-only --exit-code 1 -v -i bitstream-io -i test-with
 
 coverage:
   allow_failure: true
