spotify: depend on librespot-core and librespot-playback only
Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1818>

--- a/audio/spotify/Cargo.toml
+++ b/audio/spotify/Cargo.toml
@@ -11,7 +11,8 @@ rust-version.workspace = true
 [dependencies]
 gst.workspace = true
 gst-base.workspace = true
-librespot = { version = "0.4", default-features = false }
+librespot-core = "0.4"
+librespot-playback = "0.4"
 tokio = "1.0"
 futures = "0.3"
 anyhow = "1.0"
