--- a/audio/spotify/Cargo.toml
+++ b/audio/spotify/Cargo.toml
@@ -13,7 +13,7 @@ gst.workspace = true
 gst-base.workspace = true
 librespot-core = "0.4"
 librespot-playback = "0.4"
-tokio = "1.0"
+tokio = { version = "1", features = ["rt-multi-thread"] }
 futures = "0.3"
 anyhow = "1.0"
 url = "2.3"
