gtk4paintablesink: Deprecate wayland feature and add waylandegl feature
It's clearer that this is for GL support only.

Also remove the wayland feature dependency from the dmabuf one. While
dmabufs are only supported on wayland, it has no relation to the EGL
support.

Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1839>

--- a/video/gtk4/Cargo.toml
+++ b/video/gtk4/Cargo.toml
@@ -47,11 +47,13 @@ gst-plugin-version-helper.workspace = true
 [features]
 default = []
 static = []
-wayland = ["gtk/v4_6", "gdk-wayland", "gst-gl", "gst-gl-wayland"]
+# Deprecated
+wayland = ["waylandegl"]
+waylandegl = ["gtk/v4_6", "gdk-wayland", "gst-gl", "gst-gl-wayland"]
 x11glx = ["gtk/v4_6", "gdk-x11", "gst-gl", "gst-gl-x11"]
 x11egl = ["gtk/v4_6", "gdk-x11", "gst-gl", "gst-gl-egl"]
 winegl = ["gdk-win32/egl", "gst-gl-egl"]
-dmabuf = ["gst-allocators", "wayland", "gtk_v4_14", "gst-video/v1_24"]
+dmabuf = ["gst-allocators", "gtk_v4_14", "gst-video/v1_24"]
 capi = []
 doc = ["gst/v1_18"]
 gtk_v4_10 = ["gtk/v4_10"]
